Sun Mar 16 10:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtktoolbar.c: Add menu items for edit position and swap
		direction toolbar commands.
		Add option to hide toolbar.

Sat Mar 15 13:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Merge match/session analysis menu items.

Thu Mar 13 22:27:26 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkexport.c: change html export type and style sheet to combo_box

Thu Mar 13 22:16:39 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gktoptions.c: change cheat roll and rng choosers to combo_box

Thu Mar 13 21:54:24 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkprefs.c: change the wood type to combo_box

Thu Mar 13 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtktoolbar.c, gtkgame.c: Move stop button from toolbar to status bar.

Thu Mar 13 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtk files: Tidy up some common gtk functions and remove SIG_IO signal.

Wed Mar 12 23:06:32 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, gtkpanels.c, gtkpanels.h: update game selection menu to
	gtk_combo_box and remove the redundant names

Wed Mar 12 20:36:40 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: cleanup the Go menu

Tue Mar 11 14:53:12 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkexport.c, gtkgame.c, gtktoolbar.c, xpm/dice.xpm,
	xpm/leftarrow.xpm, xpm/rightarrow.xpm, xpm/stock_export.xpm,
	xpm/stock_import.xpm, xpm/stock_stop_16.xpm, xpm/stock_undo_16.xpm,
	xpm/tb_redouble.xpm: cleanup in the help menu and delete some unused
	xpms

Mon Mar 10 09:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkfile.c: Remove export button/menu item (use save instead)

Sun Mar  9 12:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkfile.c: Move load commands from menu into load dialog.
	  (and other small changes to this dialog)
	* gtkexport.c: Move generate html images from file menu into export settings.
