@@ -47,6 +47,7 @@ extern int frozen;
 extern int fTTY;
 extern int fX;
 extern int fToolbarShowing;
+extern int inCallback;
 extern unsigned int nDelay;
 extern GtkWidget *hpaned;
 extern GtkWidget *pom;
